# bazel-go-repro

./: .gitignore  BUILD.bazel  MODULE.bazel
