module(
    name = "main",
    version = ""
)

bazel_dep(name = "rules_go", repo_name = "io_bazel_rules_go", version = "0.46.0")
bazel_dep(name = "gazelle", repo_name = "bazel_gazelle", version = "0.36.0")

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")

go_sdk.download(version = "1.21.7")

go_sdk.nogo(
    excludes = ["@bazel_gazelle//:__subpackages__"],
    nogo = "@//:nogo",
)
